# ██████╗ ███████╗██████╗ ███████╗
# ██╔══██╗██╔════╝██╔══██╗██╔════╝
# ██████╔╝█████╗  ██████╔╝███████╗
# ██╔══██╗██╔══╝  ██╔═══╝ ╚════██║
# ██║  ██║███████╗██║     ███████║
# ╚═╝  ╚═╝╚══════╝╚═╝     ╚══════╝
#╔═══════════════════════════════╗
#║ Rust Efficiency & Performance ║
#╚═══════════════════════════════╝
[package]
name    = "throttle-net"
version = "0.7.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "General-purpose outbound throttling and resilience for Rust: multi-algorithm rate limiting, multi-dimensional and cost-aware limits, adaptive throttling, circuit breakers, and jittered backoff/retry. The outbound companion to rate-net."

# Keywords (5 max)
keywords = [
    "rate-limiting",
    "throttling",
    "circuit-breaker",
    "retry",
    "backoff"
]

# Categories
categories = [
    "asynchronous",
    "network-programming",
    "concurrency"
]

# Links
homepage      = "https://github.com/jamesgober/throttle-net"
repository    = "https://github.com/jamesgober/throttle-net"
documentation = "https://docs.rs/throttle-net"

# Authors
authors = [
    "James Gober <me@jamesgober.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "throttle_net"
path = "src/lib.rs"


# LINTS
# #################################
# `loom` is a build-time cfg toggled via `RUSTFLAGS="--cfg loom"` for the
# concurrency model check; `docsrs` is set by docs.rs. Registering them keeps
# `unexpected_cfgs` quiet under `-D warnings`.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(loom)',
    'cfg(docsrs)',
] }


# FEATURE FLAGS
# #################################
[features]
default = ["std", "tokio"]
# Standard library. Gates the limiter surface: the token-bucket accounting
# (`better-bucket`), the injectable clock (`clock-lib`), and the domain error
# type (`error-forge`). With std off the crate is `no_std` and exposes only
# `VERSION`.
std = [
    "dep:better-bucket",
    "better-bucket/clock",
    "dep:clock-lib",
    "clock-lib/std",
    "dep:error-forge",
    "dep:ahash",
]
# Tokio async runtime integration (default). Provides the waiting `acquire`
# surface; implies `std`, since the limiter sits underneath it.
tokio = ["std", "dep:tokio"]
# AIMD + latency-based adaptive limiters. The adaptive concurrency limiter waits
# on a freed slot via tokio's `Notify`, so it pulls the tokio integration.
adaptive = ["std", "tokio"]
# Circuit breaker state machine. Requires the limiter surface (std).
circuit-breaker = ["std"]
# HTTP rate-limit header parsing. Requires the limiter surface (std).
provider-headers = ["std"]
# LLM provider presets (Anthropic, OpenAI, ...).
provider-llm = ["provider-headers"]
# Metrics counters/histograms.
metrics = ["dep:metrics"]
# Tracing spans around acquire().
tracing = ["dep:tracing"]
# Serializable limiter configs.
serde = ["dep:serde"]


# DEPENDENCIES
# #################################
# Runtime adapters beyond tokio (async-std, smol) land with v0.8.0 runtime
# flexibility; they are not wired here until there is code that uses them.
[dependencies]
# Token-bucket accounting (the single source of truth; never re-implemented).
# Its `clock` feature exposes the `Bucket` surface and the `acquire(n)` path
# that backs cost-aware acquisition.
better-bucket = { version = "1", default-features = false, optional = true }
# Monotonic, mockable time: the clock the bucket reads on the acquire path,
# injected so tests can substitute a `ManualClock`.
clock-lib     = { version = "1", default-features = false, optional = true }
# Domain error type metadata (kind/retryability), shared across the portfolio
# stack instead of thiserror/anyhow in a library crate.
error-forge   = { version = "1", optional = true }
# Fast, DoS-resistant hashing for the per-key shard map and shard selection. Its
# runtime-rng default seeds each store randomly, keeping it collision-attack
# resistant against hostile keys.
ahash         = { version = "0.8", optional = true }
# Async runtime for the waiting `acquire` surface: the timer for backoff/refill
# waits, `sync::Notify` for the queue's waiter coordination, and `macros` for
# `select!` (waiting on a wake-up or a deadline, whichever comes first).
tokio   = { version = "1", optional = true, default-features = false, features = ["time", "sync", "macros"] }
metrics = { version = "0.23", optional = true }
tracing = { version = "0.1", optional = true }
serde   = { version = "1", optional = true, default-features = false, features = ["derive"] }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"
tokio     = { version = "1", features = ["full", "test-util"] }

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# EXAMPLES
# #################################
# The waiting acquire surface needs the tokio timer.
[[example]]
name              = "llm_budget"
required-features = ["tokio"]

[[example]]
name              = "retry_backoff"
required-features = ["tokio"]

[[example]]
name              = "circuit_breaker"
required-features = ["circuit-breaker", "tokio"]

[[example]]
name              = "adaptive_concurrency"
required-features = ["adaptive"]


# BENCHMARKS
# #################################
[[bench]]
name    = "throttle_bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
