# ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó
# ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēĚ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēĚ
# ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĒ‚ēĚ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó  ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĒ‚ēĚ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó
# ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēĚ  ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēĚ ‚ēö‚ēź‚ēź‚ēź‚ēź‚Ėą‚Ėą‚ēĎ
# ‚Ėą‚Ėą‚ēĎ  ‚Ėą‚Ėą‚ēĎ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĎ     ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĎ
# ‚ēö‚ēź‚ēĚ  ‚ēö‚ēź‚ēĚ‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ‚ēö‚ēź‚ēĚ     ‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ
#‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēó
#‚ēĎ Rust Efficiency & Performance ‚ēĎ
#‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ
[package]
name    = "throttle-net"
version = "0.8.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "General-purpose outbound throttling and resilience for Rust: multi-algorithm rate limiting, multi-dimensional and cost-aware limits, adaptive throttling, circuit breakers, and jittered backoff/retry. The outbound companion to rate-net."

# Keywords (5 max)
keywords = [
    "rate-limiting",
    "throttling",
    "circuit-breaker",
    "retry",
    "backoff"
]

# Categories
categories = [
    "asynchronous",
    "network-programming",
    "concurrency"
]

# Links
homepage      = "https://github.com/jamesgober/throttle-net"
repository    = "https://github.com/jamesgober/throttle-net"
documentation = "https://docs.rs/throttle-net"

# Authors
authors = [
    "James Gober <me@jamesgober.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "throttle_net"
path = "src/lib.rs"


# LINTS
# #################################
# `loom` is a build-time cfg toggled via `RUSTFLAGS="--cfg loom"` for the
# concurrency model check; `docsrs` is set by docs.rs. Registering them keeps
# `unexpected_cfgs` quiet under `-D warnings`.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(loom)',
    'cfg(docsrs)',
] }


# FEATURE FLAGS
# #################################
[features]
default = ["std", "tokio"]
# Standard library. Gates the limiter surface: the token-bucket accounting
# (`better-bucket`), the injectable clock (`clock-lib`), and the domain error
# type (`error-forge`). With std off the crate is `no_std` and exposes only
# `VERSION`.
std = [
    "dep:better-bucket",
    "better-bucket/clock",
    "dep:clock-lib",
    "clock-lib/std",
    "dep:error-forge",
    "dep:ahash",
]
# Internal marker: an async runtime backend is selected, so the waiting `acquire`
# surface (and the queue) is available. Enabled by `tokio` / `smol`; not meant to
# be turned on directly. Pulls the runtime-agnostic async primitives: a
# notification primitive (`event-listener`) and a future combinator for racing a
# wake-up against a timeout (`futures-lite`).
runtime = ["std", "dep:event-listener", "dep:futures-lite"]
# Tokio async runtime integration (default): drives the waiting `acquire` timer.
tokio = ["runtime", "dep:tokio"]
# smol async runtime integration: an alternative timer backend for the waiting
# `acquire` surface. (async-std is intentionally unsupported ‚ÄĒ it is discontinued,
# RUSTSEC-2025-0052.)
smol = ["runtime", "dep:smol"]
# AIMD + latency-based adaptive limiters. The synchronous surface needs only
# `std`; the waiting `acquire` additionally needs a runtime (`tokio` / `smol`).
adaptive = ["std", "dep:event-listener"]
# Circuit breaker state machine. Requires the limiter surface (std).
circuit-breaker = ["std"]
# HTTP rate-limit header parsing. Requires the limiter surface (std).
provider-headers = ["std"]
# LLM provider presets (Anthropic, OpenAI, ...).
provider-llm = ["provider-headers"]
# Metrics counters/histograms.
metrics = ["dep:metrics"]
# Tracing spans around acquire().
tracing = ["dep:tracing"]
# Serializable limiter configs.
serde = ["dep:serde"]


# DEPENDENCIES
# #################################
[dependencies]
# Token-bucket accounting (the single source of truth; never re-implemented).
# Its `clock` feature exposes the `Bucket` surface and the `acquire(n)` path
# that backs cost-aware acquisition.
better-bucket = { version = "1", default-features = false, optional = true }
# Monotonic, mockable time: the clock the bucket reads on the acquire path,
# injected so tests can substitute a `ManualClock`.
clock-lib     = { version = "1", default-features = false, optional = true }
# Domain error type metadata (kind/retryability), shared across the portfolio
# stack instead of thiserror/anyhow in a library crate.
error-forge   = { version = "1", optional = true }
# Fast, DoS-resistant hashing for the per-key shard map and shard selection. Its
# runtime-rng default seeds each store randomly, keeping it collision-attack
# resistant against hostile keys.
ahash         = { version = "0.8", optional = true }
# Runtime-agnostic notification primitive: the queue and adaptive limiter wait on
# an `Event` rather than a tokio-specific `Notify`, so the same code runs on any
# executor.
event-listener = { version = "5", default-features = false, optional = true }
# Runtime-agnostic future combinator (`future::or`) for racing a wake-up against a
# timeout in the queue, without a runtime-specific `select!`.
futures-lite   = { version = "2", default-features = false, optional = true }
# Tokio timer backend for the waiting `acquire` surface (only the timer is used).
tokio   = { version = "1", optional = true, default-features = false, features = ["time"] }
# smol timer backend (`smol::Timer`) for the waiting `acquire` surface.
smol    = { version = "2", optional = true }
metrics = { version = "0.23", optional = true }
tracing = { version = "0.1", optional = true }
serde   = { version = "1", optional = true, default-features = false, features = ["derive"] }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"
tokio     = { version = "1", features = ["full", "test-util"] }

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# EXAMPLES
# #################################
# The waiting acquire surface needs the tokio timer.
[[example]]
name              = "llm_budget"
required-features = ["tokio"]

[[example]]
name              = "retry_backoff"
required-features = ["tokio"]

[[example]]
name              = "circuit_breaker"
required-features = ["circuit-breaker", "tokio"]

[[example]]
name              = "adaptive_concurrency"
required-features = ["adaptive"]

[[example]]
name              = "per_tenant_quotas"
required-features = ["tokio"]


# BENCHMARKS
# #################################
[[bench]]
name    = "throttle_bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
